--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,6 @@
-argcomplete==3.5.3
-blinker==1.9.0
-boto3==1.35.97
-botocore==1.35.97
-certifi==2024.12.14
-cfn-flip==1.3.0
-charset-normalizer==3.4.1
-click==8.1.8
-contourpy==1.3.1
-cycler==0.12.1
-durationpy==0.9
-Flask==3.1.0
-fonttools==4.55.3
-hjson==3.1.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.5
-jmespath==1.0.1
-kappa==0.6.0
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-numpy==2.2.1
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-placebo==0.9.0
-pyparsing==3.2.1
-python-dateutil==2.9.0.post0
-python-slugify==8.0.4
-pytz==2024.2
-PyYAML==6.0.2
-requests==2.32.3
-s3transfer==0.10.4
-scipy==1.15.1
-setuptools==75.8.0
-six==1.17.0
-text-unidecode==1.3
-toml==0.10.2
-tqdm==4.67.1
-troposphere==4.8.3
-tzdata==2024.2
-urllib3==2.3.0
-Werkzeug==3.1.3
-wheel==0.45.1
-zappa==0.59.0
+flask
+matplotlib
+numpy
+pandas
+scipy
+zappa
